知道了它的模拟数据的传递方式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">OddLayout</string>
+    <string name="app_name">Mvp</string>
     <string name="bracket_people">(%1$s人)</string>
 </resources>
